# cpp-unnecessary

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg-configuration.json  vcpkg.json
.devcontainer/: devcontainer.json
src/: main.cpp
